--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
     <script src="lib/ionic/js/angular/angular-resource.min.js"></script>
     <script src="cordova.js"></script>
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="app.js"></script>
     <script src="assets/js/ionic-ion-autoListDivider.js"></script>
     <script src="components/eventbrite_events/eventbrite_events_service.js"></script>
@@ -27,6 +28,8 @@
     <script src="components/list/list_controller.js"></script>
     <script src="assets/js/Chart.min.js"></script>
     <script src="assets/js/angular-chart.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAs0EEi-HF0Y-Uj7tEoPxYefNktMGeo9dM"></script>
+
   </head>
 
   <body ng-app="eventbriteEvents">
